--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <base />
-    <meta http-equiv="Content-Security-Policy"
-          content="upgrade-insecure-requests" />
     <link rel="alternate" hreflang="vi-vn" href="#" />
     <meta name="robots" content="index, follow" />
     <link href="~/assets/hinhanh/favicon.png"
@@ -44,82 +42,75 @@
     <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome -->
     <link rel="stylesheet"
-          href="https://bvhungvuong.vn/admin/css/font-awesome.min.css" />
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+          href="~/css/lib/fontawesome-all.min.css"
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
-    <!-- Slide -->
-    <!-- <link rel="stylesheet" type="text/css" href="css/wow.style.css" />
-    <link rel="stylesheet" type="text/css" href="css/revslider.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.theme.css" /> -->
     <!-- SmartMenus core CSS (required) -->
     <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
     <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
-    <link href="~/css/lib/sm-blue.css" rel="stylesheet" type="text/css" />
-    <!-- Fancy box -->
-    <link rel="stylesheet"
-          type="text/css"
-          href="~/css/fancybox/jquery.fancybox8cbb.css?v=2.1.5"
-          media="screen" />
+    <link href="~/css/lib/sm-blue.css" rel="stylesheet" type="text/css" />   
     <!-- Slick -->
-    <link rel="stylesheet" type="text/css" href="~/css/lib/slick.css" />
     <link rel="stylesheet"
           href="~/css/lib/splide.min.css" />
-    <!-- Scroll -->
-    <link rel="stylesheet"
-          href="~/css/lib/jquery.simplyscroll.css"
-          media="all"
-          type="text/css" />
     <!-- My main CSS -->
+    <link href="~/css/main.css rel="stylesheet" type="text/css" />
     <link href="~/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/main.scss rel="stylesheet" type="text/css" />
     <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" />
-   
+
 </head>
 <body>
     <header>
         <div id="banner">
             <div class="center banner_d">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="~/assets/hinhanh/decaCare_5_anhlogo.png" alt="Logo" style="position:relative" />
-                        <div class="logo-text">
-                            <div class="logo-text-name"><h1>PHÒNG KHÁM DECACARE</h1></div>
-                            <div class="logo-text-add">
-                                <h3>8B, Nơ 8 KĐT Định Công, Hoàng Mai, Hà Nội</h3>
-                            </div>
+                    <a asp-controller="Home" asp-action="Index">
+                        <img src="~/assets/hinhanh/decaCare_5_anhlogo.png" alt="Logo" />
+                        <div class="logo-slogan">
+                            <h2>PHÍA SAU UNG THƯ LÀ CUỘC SỐNG</h2>
                         </div>
                     </a>
+                    <div class="logo-desc">
+                        <h2>CÙNG BẠN NÂNG NIU CUỘC SỐNG NÀY</h2>
+                        <h3><b>Địa chỉ:</b> 8B, Nơ 8 KĐT Định Công, Hoàng Mai, Hà Nội</h3>
+                        <h3><b>Giờ làm việc:</b> 7h - 19h, từ thứ hai đến chủ nhật</h3>
+                    </div>
                 </div>
                 <div class="banner">
                     <div class="banner-text">
                         <h3>
-                            <div>CÙNG BẠN NÂNG NIU CUỘC SỐNG NÀY</div>
-                            <span>Phía sau ung thư là cuộc sống</span>
+                            <span>
+                                TRUNG TÂM PHÁT HIỆN SỚM UNG THƯ & CHĂM SÓC GIẢM NHẸ DECACARE
+                            </span>
+                            <br />
+                            <span><b>DT Liên hệ:</b> 092.889.1551</span>
                         </h3>
                     </div>
                 </div>
             </div>
             <div class="center banner_m">
                 <div class="logo">
-                    <img src="~/assets/hinhanh/decaCare_5_anhlogo.png" alt="Logo" />
-                    <a href="index.html">
-                        <div class="logo-text">
-                            <div class="logo-text-name"><h1>PHÒNG KHÁM DECACARE</h1></div>
-                            <div class="logo-text-add">
-                                <h3>8B, Nơ 8 KĐT Định Công, Hoàng Mai, Hà Nội</h3>
-                            </div>
+                    <a asp-controller="Home" asp-action="Index">
+                        <div class="logo-slogan">
+                            <h2>
+                                PHÍA SAU UNG THƯ LÀ CUỘC SỐNG <br />CÙNG BẠN NÂNG NIU CUỘC SỐNG
+                                NÀY
+                            </h2>
                         </div>
                     </a>
+                    <div class="logo-desc">
+                        <h3><b>Địa chỉ:</b> 8B, Nơ 8 KĐT Định Công, Hoàng Mai, Hà Nội</h3>
+                        <h3><b>Giờ làm việc:</b> 7h - 19h, từ thứ hai đến chủ nhật</h3>
+                    </div>
                 </div>
                 <div class="banner">
                     <div class="banner-text">
                         <h3>
-                            <div>CÙNG BẠN NÂNG NIU CUỘC SỐNG NÀY</div>
-                            <span>Phía sau ung thư là cuộc sống</span>
+                            <span>
+                                TRUNG TÂM PHÁT HIỆN SỚM UNG THƯ & CHĂM SÓC GIẢM NHẸ DECACARE
+                            </span>
+                            <br />
+                            <span><b>DT Liên hệ:</b> 092.889.1551</span>
                         </h3>
                     </div>
                 </div>
@@ -129,10 +120,10 @@
             <div class="menu-center">
                 <ul id="main-menu" class="sm sm-blue">
                     <li class="menu-line activem">
-                        <a asp-controller="Home" asp-action="Index">Trang chủ</a>
+                        <a asp-controller="Home" asp-action="Index">Trang chủ </a>
                     </li>
                     <li class="menu-line">
-                        <a asp-controller="GioiThieu" asp-action="Index" >Giới thiệu</a>
+                        <a asp-controller="GioiThieu" asp-action="Index">Thương hiệu</a>
                         <ul>
                             <li>
                                 <a href="gioi-thieu/gioi-thieu-benh-vien-967/index.html">Giới thiệu bệnh viện</a>
@@ -453,7 +444,7 @@
                         </ul>
                     </li>
                     <li class="menu-line">
-                        <a href="tin-tuc.html">Tin tức</a>
+                        <a href="#">Dịch vụ khám</a>
                         <ul>
                             <li>
                                 <a href="tin-tuc/tin-noi-bat-16/index.html">Tin nổi bật</a>
@@ -461,42 +452,44 @@
                         </ul>
                     </li>
                     <li class="menu-line">
-                        <a href="danh-cho-nhan-vien/dao-tao-1144/index.html">Đào tạo</a>
+                        <a href="tin-tuc.html">Tin tức & kiến thức</a>
                     </li>
                     <li class="menu-line">
-                        <a href="hoi-dap.html">Hỏi đáp</a>
+                        <a href="#">Đặt lịch khám</a>
+                    </li>
+                    <!-- <li class="menu-line">
+                      <a href="gioi-thieu-chung/lien-he.html">Liên hệ</a>
+                      <ul>
+                        <li><a href="gioi-thieu-chung/lien-he.html">Liên hệ</a></li>
+                      </ul>
+                    </li> -->
+                    <li class="menu-line">
+                        <a href="dang-nhap.html"><i class="fa fa-user"></i> &nbsp; Đăng nhập</a>
+                    </li>
+                    <!-- <li class="menu-line">
+                      <a href="index.html"
+                        ><img
+                          src="img/vn.png"
+                          class="quick-link-image"
+                          alt="Tiếng Việt"
+                          width="25"
+                          height="25"
+                      /></a>
                     </li>
                     <li class="menu-line">
-                        <a href="gioi-thieu-chung/lien-he.html">Liên hệ</a>
-                        <ul>
-                            <li><a href="gioi-thieu-chung/lien-he.html">Liên hệ</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-line">
-                        <a href="dang-nhap.html"><i class="fa fa-user"></i> LOGIN</a>
-                    </li>
-                    <li class="menu-line">
-                        <a href="index.html">
-                            <img src="~/assets/icon/vn.png"
-                                 class="quick-link-image"
-                                 alt="Tiếng Việt"
-                                 width="25"
-                                 height="25" />
-                        </a>
-                    </li>
-                    <li class="menu-line">
-                        <a href="index.html">
-                            <img src="~/assets/icon/en.png"
-                                 class="quick-link-image"
-                                 alt="Tiếng Anh"
-                                 width="25"
-                                 height="25" />
-                        </a>
-                    </li>
-                    <li class="menu-line search1">
-                        <!--<a href="#"><img src="/img/search.png" class="quick-link-image" width="25" height="25"</a>-->
-                        <a href="#"><i class="fa fa-search"></i></a>
-                    </li>
+                      <a href="index.html"
+                        ><img
+                          src="img/en.png"
+                          class="quick-link-image"
+                          alt="Tiếng Anh"
+                          width="25"
+                          height="25"
+                      /></a>
+                    </li> -->
+                    <!-- <li class="menu-line search1">
+
+                      <a href="#"><i class="fa fa-search"></i></a>
+                    </li> -->
                 </ul>
             </div>
             <div class="top-search" style="display: none">
@@ -528,7 +521,7 @@
                         <a href="index.html">Trang chủ </a>
                     </li>
                     <li class="menu-line">
-                        <a href="gioi-thieu.html">Giới thiệu</a>
+                        <a href="gioi-thieu.html">Thương hiệu</a>
                         <ul>
                             <li>
                                 <a href="gioi-thieu/gioi-thieu-benh-vien-967/index.html">Giới thiệu bệnh viện</a>
@@ -785,7 +778,7 @@
                         </ul>
                     </li>
                     <li class="menu-line">
-                        <a href="tin-tuc.html">Tin tức</a>
+                        <a href="#">Dịch vụ khám</a>
                         <ul>
                             <li>
                                 <a href="tin-tuc/tin-noi-bat-16/index.html">Tin nổi bật</a>
@@ -793,17 +786,22 @@
                         </ul>
                     </li>
                     <li class="menu-line">
-                        <a href="hoi-dap.html">Hỏi đáp</a>
+                        <a href="tin-tuc.html">Tin tức & kiến thức</a>
                     </li>
                     <li class="menu-line">
-                        <a href="gioi-thieu-chung/lien-he.html">Liên hệ</a>
+                        <a href="#">Đặt lịch khám</a>
                         <ul>
                             <li><a href="gioi-thieu-chung/lien-he.html">Liên hệ</a></li>
                         </ul>
                     </li>
+                    <li class="menu-line">
+                        <a href="dang-nhap.html">Đăng nhập</a>
+                    </li>
                 </ul>
             </div>
         </div>
+
+      
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -811,7 +809,7 @@
             <div id="fb-root"></div>
         </main>
     </div>
-    <div id="back-top" style="cursor: pointer" title="Len Dau Trang."></div>
+    <div id="back-top" style="cursor: pointer; border-radius: 50%;" title="Len Dau Trang."></div>
     <div id="footer">
         <div class="center w-clear">
             <div class="ft-1">Số Tổng Đài: <span>(028) 3855 8532</span></div>
@@ -837,21 +835,18 @@
         </div>
     </div>
     <!-- SmartMenus jQuery plugin -->
-    <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/css/fancybox/jquery.fancybox8cbb.js"></script>
-    <!-- Slick -->
-    <script type="text/javascript" src="~/js/lib/slick.min.js"></script>
-  
-    <!-- Scroll -->
-    <script type="text/javascript" src="~/js/lib/jquery.simplyscroll.js"></script>
+    <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
+   
     <!-- My custom js -->
-    <script type="text/javascript" src="~/js/lib/thanhtam.js"></script>
+    <script asp-append-version="true" src="~/js/site.js"></script>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
+  
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
