--- a/PhongKham/wwwroot/css/newstyle.css
+++ b/PhongKham/wwwroot/css/newstyle.css
@@ -1,8 +1,216 @@
+﻿@charset "UTF-8";
 :root {
   --main-color: #005b00;
   --secondary-color: #e7528d;
 }
 
+/*main css*/
+a {
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+}
+
+a:focus {
+  outline: none !important;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+/* ------------------------------------ */
+h1, h2, h3, h4, h5, h6 {
+  margin: 0px;
+}
+
+p {
+  margin: 0px;
+}
+
+ul, li {
+  margin: 0px;
+  list-style-type: none;
+}
+
+/* ------------------------------------ */
+textarea {
+  display: block;
+  outline: none;
+}
+
+/* ------------------------------------ */
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+iframe {
+  border: none !important;
+}
+
+/*//////////////////////////////////////////////////////////////////
+
+[ Table ]*/
+.limiter {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.container-table100 {
+  width: 100%;
+  min-height: 100vh;
+  background: #c4d3f6;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 33px 30px;
+}
+
+.wrap-table100 {
+  width: 960px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.table {
+  width: 100%;
+  display: table;
+  margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .table {
+    display: block;
+  }
+}
+.row {
+  display: table-row;
+  background: #fff;
+}
+
+.row.header {
+  color: #ffffff;
+  background: #6c7ae0;
+}
+
+@media screen and (max-width: 768px) {
+  .row {
+    display: block;
+  }
+  .row.header {
+    padding: 0;
+    height: 0px;
+  }
+  .row.header .cell {
+    display: none;
+  }
+  .row .cell:before {
+    font-family: Poppins-Bold;
+    font-size: 12px;
+    color: #808080;
+    line-height: 1.2;
+    text-transform: uppercase;
+    font-weight: unset !important;
+    margin-bottom: 13px;
+    content: attr(data-title);
+    min-width: 98px;
+    display: block;
+  }
+}
+.cell {
+  display: table-cell;
+}
+
+@media screen and (max-width: 768px) {
+  .cell {
+    display: block;
+  }
+}
+.row .cell {
+  font-family: Poppins-Regular;
+  font-size: 15px;
+  color: #666666;
+  line-height: 1.2;
+  font-weight: unset !important;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.row.header .cell {
+  font-family: Poppins-Regular;
+  font-size: 18px;
+  color: #fff;
+  line-height: 1.2;
+  font-weight: unset !important;
+  padding-top: 19px;
+  padding-bottom: 19px;
+}
+
+.row .cell:nth-child(1) {
+  width: 55%;
+  padding-left: 40px;
+}
+
+.row .cell:nth-child(2) {
+  width: 30%;
+}
+
+.row .cell:nth-child(3) {
+  width: 15%;
+}
+
+.table, .row {
+  width: 100% !important;
+}
+
+.row:hover {
+  background-color: #ececff;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .row {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 18px;
+    padding-top: 30px;
+    padding-right: 15px;
+    margin: 0;
+  }
+  .row .cell {
+    border: none;
+    padding-left: 30px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .row .cell:nth-child(1) {
+    padding-left: 30px;
+  }
+  .row .cell {
+    font-family: Poppins-Regular;
+    font-size: 18px;
+    color: #555555;
+    line-height: 1.2;
+    font-weight: unset !important;
+  }
+  .table, .row, .cell {
+    width: 100% !important;
+  }
+}
+/*nghĩa css*/
 #banner .banner_d .logo,
 #banner .banner_m .logo {
   padding: 10px;
@@ -10,28 +218,40 @@
 #banner .banner_d .logo a,
 #banner .banner_m .logo a {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 15px;
 }
 #banner .banner_d .logo a img,
 #banner .banner_m .logo a img {
-  height: 100px;
+  height: 60px;
 }
-#banner .banner_d .logo a .logo-text,
-#banner .banner_m .logo a .logo-text {
-  text-align: center;
-}
-#banner .banner_d .logo a .logo-text .logo-text-name h1,
-#banner .banner_m .logo a .logo-text .logo-text-name h1 {
-  color: black;
+#banner .banner_d .logo a .logo-slogan h2,
+#banner .banner_m .logo a .logo-slogan h2 {
+  font-size: 24px;
   font-weight: bold;
-  font-size: 25px;
-}
-#banner .banner_d .logo a .logo-text .logo-text-add h3,
-#banner .banner_m .logo a .logo-text .logo-text-add h3 {
   color: black;
+  margin-top: 12px;
+}
+#banner .banner_d .logo .logo-desc h2,
+#banner .banner_m .logo .logo-desc h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+#banner .banner_d .logo .logo-desc h3,
+#banner .banner_m .logo .logo-desc h3 {
   font-size: 16px;
   margin: 0px;
+}
+#banner .banner_d .banner,
+#banner .banner_m .banner {
+  text-align: left;
+  padding: 10px;
+}
+#banner .banner_d .banner .banner-text,
+#banner .banner_m .banner .banner-text {
+  max-width: 500px;
+  margin-top: 17px;
 }
 #banner .banner_d .banner .banner-text h3,
 #banner .banner_m .banner .banner-text h3 {
@@ -39,13 +259,19 @@
 }
 #banner .banner_d .banner .banner-text h3 div,
 #banner .banner_m .banner .banner-text h3 div {
-  margin-bottom: 10px;
   font-weight: bold;
   color: var(--main-color);
 }
 #banner .banner_d .banner .banner-text h3 span,
 #banner .banner_m .banner .banner-text h3 span {
   color: var(--main-color);
+  font-size: 16px;
+}
+@media only screen and (max-width: 1160px) {
+  #banner .banner_d .banner .banner-text,
+  #banner .banner_m .banner .banner-text {
+    margin-top: 10px;
+  }
 }
 @media (max-width: 768px) {
   #banner .banner_m {
@@ -54,6 +280,7 @@
     align-items: center;
     gap: 10px;
     padding-bottom: 5px;
+    text-align: left !important;
   }
   #banner .banner_m .logo {
     padding: unset;
@@ -62,8 +289,6 @@
 
 #menu {
   background-color: var(--main-color);
-  display: flex;
-  justify-content:center;
 }
 #menu .menu-center ul li ul {
   background-color: white;
@@ -88,6 +313,10 @@
 }
 #menu .menu-center ul li.activem a {
   color: var(--main-color) !important;
+}
+
+#banner .banner_d {
+  align-items: flex-start;
 }
 
 #smenu {
@@ -139,7 +368,7 @@
   height: auto;
   object-fit: cover;
 }
-#banner-carousel .splide__slide .slide-desc {
+#banner-carousel .splide__slide div {
   font-weight: bold;
   font-size: 20px;
 }
@@ -154,6 +383,10 @@
   right: 0.5em;
 }
 
+#info .user-type-portals,
+#patient .user-type-portals {
+  align-items: flex-start;
+}
 #info .user-type-portals .user-type-portals__link-portal,
 #patient .user-type-portals .user-type-portals__link-portal {
   background-color: var(--main-color);
@@ -188,6 +421,12 @@
 #patient .user-type-portals .user-type-portals__link-portal .l_side_block a:hover {
   background-color: #d3e3fd;
 }
+@media only screen and (min-width: 768px) {
+  #info .user-type-portals .user-type-portals__link-portal,
+  #patient .user-type-portals .user-type-portals__link-portal {
+    margin-inline: 10px;
+  }
+}
 
 #news .tintucyte {
   border-color: var(--main-color);
@@ -195,22 +434,26 @@
 #news .tintucyte h2 {
   color: var(--main-color);
 }
-#news .news-type {
+#news .news-type,
+#news .news-type_m {
   display: flex;
   gap: 10px;
   align-items: stretch;
   flex-wrap: wrap;
   margin-bottom: 10px;
 }
-#news .news-type .news-type-name {
+#news .news-type .news-type-name,
+#news .news-type_m .news-type-name {
   display: block;
   border: 1px solid #bababa;
   background: rgba(0, 0, 0, 0.06);
   padding: 10px;
   border-radius: 5px;
+  text-align: center;
   cursor: pointer;
 }
-#news .news-type .news-type-name:hover {
+#news .news-type .news-type-name:hover,
+#news .news-type_m .news-type-name:hover {
   border-color: var(--main-color);
   background-color: var(--main-color);
   color: white;
@@ -230,6 +473,16 @@
   color: red;
 }
 
+@media only screen and (min-width: 768px) {
+  .news-type_m {
+    display: none !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .news-type {
+    display: none !important;
+  }
+}
 .sidebar-left .sidebar-menu li {
   background-color: var(--main-color);
 }
@@ -238,8 +491,14 @@
   color: white;
 }
 
-#footer .ft-b {
+#center .ldangnhap .main-tit h2 {
+  color: var(--main-color);
+  border-color: var(--main-color);
+}
+#center .ldangnhap .frm-tit .btn {
   background-color: var(--main-color);
 }
 
-/*# sourceMappingURL=newstyle.css.map */
+#footer .ft-b {
+  background-color: var(--main-color);
+}
