--- a/PhongKham/wwwroot/css/newstyle.scss
+++ b/PhongKham/wwwroot/css/newstyle.scss
@@ -1,50 +1,63 @@
-:root {
+﻿:root {
   --main-color: #005b00;
   --secondary-color: #e7528d;
 }
+
 #banner {
   .banner_d,
   .banner_m {
     .logo {
       padding: 10px;
+
       a {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         gap: 15px;
         img {
-          height: 100px;
+          height: 60px;
         }
-        .logo-text {
-          text-align: center;
-          .logo-text-name {
-            h1 {
-              color: black;
-              font-weight: bold;
-              font-size: 25px;
-            }
+        .logo-slogan {
+          h2 {
+            font-size: 24px;
+            font-weight: bold;
+            color: black;
+            margin-top: 12px;
           }
-          .logo-text-add {
-            h3 {
-              color: black;
-              font-size: 16px;
-              margin: 0px;
-            }
-          }
+        }
+      }
+      .logo-desc {
+        h2 {
+          font-size: 20px;
+          font-weight: bold;
+          margin-top: 10px;
+        }
+        h3 {
+          font-size: 16px;
+          margin: 0px;
         }
       }
     }
     .banner {
+      text-align: left;
+      padding: 10px;
       .banner-text {
+        max-width: 500px;
+        margin-top: 17px;
         h3 {
           margin: 0;
           div {
-            margin-bottom: 10px;
             font-weight: bold;
             color: var(--main-color);
           }
           span {
             color: var(--main-color);
+            font-size: 16px;
           }
+        }
+      }
+      @media only screen and (max-width: 1160px) {
+        .banner-text {
+          margin-top: 10px;
         }
       }
     }
@@ -56,6 +69,7 @@
       align-items: center;
       gap: 10px;
       padding-bottom: 5px;
+      text-align: left !important;
       .logo {
         padding: unset;
       }
@@ -99,6 +113,9 @@
       }
     }
   }
+}
+#banner .banner_d {
+  align-items: flex-start;
 }
 #smenu {
   background-color: white;
@@ -153,7 +170,7 @@
       height: auto;
       object-fit: cover;
     }
-    .slide-desc {
+    div {
       font-weight: bold;
       font-size: 20px;
     }
@@ -172,8 +189,10 @@
 #info,
 #patient {
   .user-type-portals {
+    align-items: flex-start;
     .user-type-portals__link-portal {
       background-color: var(--main-color);
+
       .content {
         background-color: #f2f2f2;
         ul {
@@ -200,6 +219,11 @@
         }
       }
     }
+    @media only screen and (min-width: 768px) {
+      .user-type-portals__link-portal {
+        margin-inline: 10px;
+      }
+    }
   }
 }
 #news {
@@ -209,7 +233,8 @@
       color: var(--main-color);
     }
   }
-  .news-type {
+  .news-type,
+  .news-type_m {
     display: flex;
     gap: 10px;
     align-items: stretch;
@@ -221,6 +246,7 @@
       background: rgba(0, 0, 0, 0.06);
       padding: 10px;
       border-radius: 5px;
+      text-align: center;
       cursor: pointer;
     }
     .news-type-name:hover {
@@ -248,6 +274,16 @@
     }
   }
 }
+@media only screen and (min-width: 768px) {
+  .news-type_m {
+    display: none !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .news-type {
+    display: none !important;
+  }
+}
 .sidebar-left {
   .sidebar-menu {
     li {
@@ -255,6 +291,21 @@
       a:hover {
         text-decoration: underline !important;
         color: white;
+      }
+    }
+  }
+}
+#center {
+  .ldangnhap {
+    .main-tit {
+      h2 {
+        color: var(--main-color);
+        border-color: var(--main-color);
+      }
+    }
+    .frm-tit {
+      .btn {
+        background-color: var(--main-color);
       }
     }
   }
